Test 'create-react-class' with fixtures
NOTE: Never going to merge this commit, but I may cherry-pick it onto
branches in order to test fixes for issue #9765

In this case I will clean it up afterwards.

**what is the change?:**
Require and use the UMD bundles of 'create-react-class' in three
fixtures to test the three supported uses;
 - test Global JS with globals.html
 - test AMD with requirejs.html
 - test CommonJS with webpack-alias

**why make this change?:**
To test https://github.com/facebook/react/pull/9761 and other PRs fixing https://github.com/facebook/react/issues/9765

**test plan:**
Manual testing;
 - cd into the directory in fixtures
 - run the build step if needed
 - open the file

**issue:**
https://github.com/facebook/react/issues/9765

--- a/fixtures/globals.html
+++ b/fixtures/globals.html
@@ -2,6 +2,7 @@
   <body>
     <script src="../build/react-with-addons.js"></script>
     <script src="../build/react-dom.js"></script>
+    <script src="../addons/create-react-class/create-react-class.js"></script>
     <style>
       .example-appear {
         opacity: 0.01;
@@ -15,16 +16,23 @@
     <div id="container"></div>
     <script>
       var CSSTransitionGroup = React.addons.CSSTransitionGroup;
+      var Greeting = createReactClass({
+        render: function() {
+          return React.createElement('H1', null, 'Hello' + this.props.name + '!!!!!');
+        }
+      });
       ReactDOM.render(
-        React.createElement(CSSTransitionGroup, {
-          transitionName: 'example',
-          transitionAppear: true,
-          transitionAppearTimeout: 500,
-          transitionEnterTimeout: 0,
-          transitionLeaveTimeout: 0,
-        }, React.createElement('h1', null,
-          'Hello World!'
-        )),
+        React.createElement(
+          CSSTransitionGroup,
+          {
+            transitionName: 'example',
+            transitionAppear: true,
+            transitionAppearTimeout: 500,
+            transitionEnterTimeout: 0,
+            transitionLeaveTimeout: 0,
+          },
+          React.createElement(Greeting, {name: 'FOO'}),
+        ),
         document.getElementById('container')
       );
     </script>
