--- a/fixtures/dom/public/index.html
+++ b/fixtures/dom/public/index.html
@@ -14,11 +14,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
     <script src="https://unpkg.com/prop-types@15.5.6/prop-types.js"></script>
+
     <script src="react-loader.js"></script>
+
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/codemirror.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/mode/javascript/javascript.min.js"></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="fill-height"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
