--- a/fixtures/dom/public/index.html
+++ b/fixtures/dom/public/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--
+      Notice the use of %PUBLIC_URL% in the tag above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
     <title>React App</title>
 
+    <script src="https://ft-polyfill-service.herokuapp.com/v2/polyfill.min.js"></script>
     <script src="https://unpkg.com/prop-types@15.5.6/prop-types.js"></script>
-
     <script src="react-loader.js"></script>
   </head>
   <body>
