--- a/fixtures/dom/public/index.html
+++ b/fixtures/dom/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -13,9 +14,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-
     <script src="https://ft-polyfill-service.herokuapp.com/v2/polyfill.min.js"></script>
-    <script src="https://unpkg.com/prop-types@15.5.6/prop-types.js"></script>
     <script src="react-loader.js"></script>
   </head>
   <body>
