Revert unintentional edit

--- a/fixtures/packaging/babel-standalone/dev.html
+++ b/fixtures/packaging/babel-standalone/dev.html
@@ -1,12 +1,12 @@
 <html>
   <body>
-    <script src="../../attribute-behavior/public/react.development.js"></script>
-    <script src="../../attribute-behavior/public/react-dom.development.js"></script>
+    <script src="../../../build/dist/react.development.js"></script>
+    <script src="../../../build/dist/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.js"></script>
     <div id="container"></div>
     <script type="text/babel">
       ReactDOM.render(
-        <svg><hkern K={'lo;'} /></svg>,
+        <h1>Hello World!</h1>,
         document.getElementById('container')
       );
     </script>
